Remove the wrapper shell script when running the app in container
Otherwise the SIGTERM is not recieved by the python app, the shell
script receives and it doesn't know what to do with it so the program
does not exit gracefully.

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -19,8 +19,9 @@ spec:
       serviceAccountName: pod-watcher-sa
       containers:
         - name: pod-watcher
-          image: ghcr.io/naved001/openshift-pod-watcher:sha-6a149b6
+          image: ghcr.io/naved001/openshift-pod-watcher:main
           imagePullPolicy: IfNotPresent
+          command: ["python", "-m", "src.main"]
           resources:
             requests:
               memory: "512Mi"
